classDiagram
    Product <|--Ticket
    Product <|--Publication
    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag
    SaleableItem <|.. Product
    Serializable <|.. Product
    Product <-- CashTill
    Product <|--BoxingGear
    BoxingGear <|--Gloves
    BoxingGear <|--Shoes
    OrderEntity --> "*" Product : contains

    class Product{
        -String productId
        +getProductId()
        +setProductId()
    }

    class Serializable{
        <<interface>>
    }
    class Ticket{
        +description
        +price
        +sellItem()
    }
    class Publication{
        <<Abstract>>
        -String title
        -double price
        -int copies
        +getPrice()

        +Publication()
        +Publication(String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Book{
        -String author
        +edit()
        +initialize()
        +sellItem()

        +Book()
        +Book(String author)
        +Book(String author, String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Magazine{
        -int orderQty
        -java.util.Date currentIssue

        +Magazine()
        +Magazine(int orderQty, Date currentIssue, String title, double price, int copies)

        +edit()
        +initialize()
        +sellItem()
    }
    class DiscMag{
        -boolean hasDisc
        +edit()
        +initialize()
        +sellItem()

        +DiscMag()
        +DiscMag(boolean, hasDisc, int orderQty, Date currentIssue, String title, double price, int copies)

    }
    class CashTill{
        -double runningTotal
        +CashTill()
        +showTotal()
        +sellItem(SaleableItem item)
    }
    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice()

    }
    class Cart {
        +Cart()
        +addItem()
        +getItems()
        +setItems()
        +equals()
        +hashCode()
        +toString()
    }
    class BoxingGearEntity {
        <<abstract>>
        -String size
        +BoxingGear()
        +BoxingGear(String size)
        +initialize()
        +initSize()
        +edit()
        +getSize()
        +setSize()
        +toString()
        +equals()
        +hashCode()
    }
    class Gloves {
        -String brand
        -double price
        -int weightOz
        +Gloves()
        +Gloves(String size, String brand, double price, int weightOz)
        +initialize()
        +edit()
        +sellItem()
        +getPrice()
        +setPrice()
        +getBrand()
        +setBrand()
        +getWeightOz()
        +setWeightOz()
        +toString()
        +equals()
        +hashCode()
    }
    class Shoes {
        -String brand
        -double price
        -boolean highTop
        +Shoes()
        +Shoes(String size, String brand, double price, boolean highTop)
        +initialize()
        +edit()
        +sellItem()
        +getPrice()
        +setPrice()
        +getBrand()
        +setBrand()
        +isHighTop()
        +setHighTop()
        +toString()
        +equals()
        +hashCode()
    }
    class OrderEntity {
        -Long id
        -double totalAmount
        -LocalDateTime orderDate
        +addProduct(Product)
        +getTotalAmount()
        +setTotalAmount()
        +getOrderDate()
        +setOrderDate()
    }